[package]
name = "smrti"
version = "0.1.0"
authors = ["Devin Singh <drsingh2518@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["sync"] }
modular-bitfield = "0.11.2"
