[package]
name = "sooraj"
version = "0.1.0"
authors = ["Devin Singh <drsingh2518@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aakil = { path = "../aakil" }
dasmaya = { path = "../dasmaya" }
smrti = { path = "../smrti" }
